--- a/views/index.html
+++ b/views/index.html
@@ -169,6 +169,9 @@
                 <li>
                   <a href="https://www.linkedin.com/in/jackson-wearn-54560b71" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                 </li>
+                <li>
+                  <a href="https://github.com/jcwearn" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                </li>
               </ul>
             </div>    
           </div>
