--- a/views/index.html
+++ b/views/index.html
@@ -68,7 +68,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <img class="img-responsive" src="images/me.jpg" alt="">
+            <img class="img-responsive" src="images/me.jpg" alt="Jackson Wearn">
             <div class="intro-text">
               <span class="name">Jackson Wearn</span>
               <span class="skills">Back End Web Developer at <a href="http://www.careerbuilder.com/" class="btn btn-cb btn-success">CareerBuilder</a></span>
