Update about me text

--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
             <img class="img-responsive" src="images/me.jpg" alt="Jackson Wearn">
             <div class="intro-text">
               <span class="name">Jackson Wearn</span>
-              <span class="skills">Back End Web Developer at <a href="http://www.careerbuilder.com/" class="btn btn-cb btn-success">CareerBuilder</a></span>
+              <span class="skills">Full Stack Web Developer at <a href="http://www.careerbuilder.com/" class="btn btn-cb btn-success">CareerBuilder</a></span>
             </div>
           </div>
         </div>
@@ -88,11 +88,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-lg-offset-2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-          <div class="col-lg-4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="col-lg-6 col-lg-offset-3">
+	    <p style="text-align:center">Hi.  My name is Jackson. I am a Software Engineer for the Jobs UX and Services team at CareerBuilder.  I am a chronic tinkerer.  I read code, I write code, and I love expanding my technological arsenal.  I have a strong fondness for Node.js and Ruby, but I am always eager to try bleeding edge technologies.  Feel free to drop me a line if you’re interested in learning about my work experience, or if you just want to chat.</p>
           </div>
         </div>
       </div>
@@ -108,8 +105,6 @@
         </div>
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
             <form name="sentMessage" id="contactForm" novalidate method="post" action="php/contact_me.php">
               <div class="row control-group">
                 <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -170,7 +165,7 @@
                   <a href="https://github.com/jcwearn" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                 </li>
               </ul>
-            </div>    
+            </div>
           </div>
         </div>
       </div>
