--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,6 @@
         <![endif]-->
 
   </head>
-
   <body id="page-top" class="index">
 
     <!-- Navigation -->
@@ -178,7 +177,7 @@
           </div>
         </div>
       </div>
-    </footer>>
+    </footer>
 
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
         <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
