--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="And depending on the type of job you're looking for I could definitely give you some things you might want to brush up on before hand.  Amazon Web Services is a highly marketable technology right now.  Obviously, super practical for anything related to Web Dev, but is used in a ton of other fields.  If you're interested in Data Science in particular, I would definitely look into Amazon's EMR.  ">
     <meta name="author" content="Jackson Wearn">
 
     <title>Jackson Wearn</title>
@@ -21,14 +21,6 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
   </head>
   <body id="page-top" class="index">
 
