--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="And depending on the type of job you're looking for I could definitely give you some things you might want to brush up on before hand.  Amazon Web Services is a highly marketable technology right now.  Obviously, super practical for anything related to Web Dev, but is used in a ton of other fields.  If you're interested in Data Science in particular, I would definitely look into Amazon's EMR.">
     <meta name="author" content="Jackson Wearn">
+    <meta name="keywords" content="Jackson,Wearn,Jackson Wearn">
 
     <title>Jackson Wearn</title>
 
