Totally put a text message as my description

--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="And depending on the type of job you're looking for I could definitely give you some things you might want to brush up on before hand.  Amazon Web Services is a highly marketable technology right now.  Obviously, super practical for anything related to Web Dev, but is used in a ton of other fields.  If you're interested in Data Science in particular, I would definitely look into Amazon's EMR.">
+    <meta name="description" content="Jackson Wearn.  Full Stack Software Engineer">
     <meta name="author" content="Jackson Wearn">
     <meta name="keywords" content="Jackson,Wearn,Jackson Wearn">
 
