--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,17 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <script type="application/ld+json">
+      {
+	"@context": "http://schema.org",
+	"@type": "Person",
+	"image": "images/me.jpg",
+	"jobTitle": "Software Engineer",
+	"name": "Jackson Wearn",
+	"url": "http://jacksonwearn.com/",
+	"worksFor" :"CareerBuilder"
+      }
+    </script>
   </head>
   <body id="page-top" class="index">
 
