--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,8 @@
 	"jobTitle": "Software Engineer",
 	"name": "Jackson Wearn",
 	"url": "http://jacksonwearn.com/",
-	"worksFor" :"CareerBuilder"
+	"worksFor": "CareerBuilder",
+	"alumniOf": "University of Georgia"
       }
     </script>
   </head>
