Put all extra head info in one block

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,9 @@
 extends layout
 
-block title
+block extra_head_info
   title Jackson Wearn
-block description
   meta(name='description', content='Jackson Wearn.  Full Stack Software Engineer')
-block jsonLd
+  meta(name='keywords', content='Jackson,Wearn,Jackson Wearn')
   script(type='application/ld+json').
     {
       "@context": "http://schema.org",
