--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,8 +15,8 @@ html(lang='en')
     link(href='https://fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic', rel='stylesheet', type='text/css')
   body#page-top.index
-    include header
+    include partials/header
     block content
-    include contact
-    include footer
+    include partials/contact
+    include partials/footer
     block extra_scripts
