--- a/views/connect_four.jade
+++ b/views/connect_four.jade
@@ -18,7 +18,7 @@ block content
     .container
       .row
         .col-lg-12
-          table#connect-four
+          canvas#connect-four(width='600', height='400')
   section#about.success
     .container
       .row
