Use partial for table

--- a/views/connect_four.jade
+++ b/views/connect_four.jade
@@ -17,8 +17,8 @@ block content
   header.me
     .container
       .row
-        .col-lg-12
-          canvas#connect-four(width='600', height='400')
+        .col-lg-6.col-lg-offset-3
+          include partials/connect_four_table
   section#about.success
     .container
       .row
