--- a/views/api-tester.html
+++ b/views/api-tester.html
@@ -121,14 +121,16 @@
       <div class="row">
         <div class="card-panel white">
           <label for="response-area">Response</label>
-          <pre id="response-area"></pre>
+          <pre><code id="response-area" class="json"></code></pre>
           <label for="headers-area">Headers</label>
-          <pre id="headers-area"></pre>
+          <pre><code id="headers-area" class="json"></code></pre>
         </div>
       </div>
 
     </div>
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="javascripts/materialize.js"></script>
     <script type="text/javascript" src="javascripts/grab_form_content.js"></script>
